--- a/static/style-deep.css
+++ b/static/style-deep.css
@@ -232,7 +232,9 @@
     flex-direction: row;
 }
 .banner {
-    width: 100%;    
+    width: 100%;   
+     padding-top: 20px;
+     padding-bottom: 20px;
 }
 
 
@@ -377,7 +379,7 @@ body {
     background-color: #1b263b;;
 }
 .carousel-caption {
-    bottom: 100px;
+    bottom: 130px;
     z-index: 2;
 }
 .carousel-caption h5 {
